// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdsCard Component Actionable Ids Card renders card action correctly 1`] = `"<ids-card-action></ids-card-action>"`;

exports[`IdsCard Component Actionable Ids Card renders card action markup 1`] = `
"
      <div class="ids-card" part="card">
        <div class="ids-card-body">
          <div class="ids-card-header" part="header">
            <slot name="card-header"></slot>
          </div>
          <div class="ids-card-content  " part="content">
            <slot name="card-content"></slot>
          </div>
          <div class="ids-card-checkbox hidden">
            <ids-checkbox></ids-checkbox>
          </div>
          <div class="ids-card-footer" part="footer">
            <slot name="card-footer"></slot>
          </div>
        </div>
      </div>
    "
`;

exports[`IdsCard Component Actionable Ids Card renders card action markup 2`] = `
"
      <div class="ids-card" part="card">
        <ids-button>
          <slot name="card-content"></slot>
        </ids-button>
      </div>
    "
`;

exports[`IdsCard Component Actionable Ids Card renders card action markup 3`] = `
"
      <div class="ids-card" part="card">
        <ids-hyperlink href="/something" target="null">
          <slot name="card-content"></slot>
        </ids-hyperlink>
      </div>
    "
`;

exports[`IdsCard Component Actionable Ids Card renders card action markup correctly 1`] = `
"
      <div class="ids-card" part="card">
        <ids-button>
          <slot name="card-content"></slot>
        </ids-button>
      </div>
    "
`;

exports[`IdsCard Component renders correctly 1`] = `
"<ids-card><div slot="card-header">
            <ids-text font-size="20" type="h2">Card Title Two</ids-text>
          </div>
          <div slot="card-content">
          </div></ids-card>"
`;
